; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/FreeRTOS/Source/extr_tasks.c_uxTaskResetEventItemValue.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/FreeRTOS/Source/extr_tasks.c_uxTaskResetEventItemValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@pxCurrentTCB = common dso_local global %struct.TYPE_2__* null, align 8
@configMAX_PRIORITIES = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @uxTaskResetEventItemValue() #0 {
  %1 = alloca i64, align 8
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentTCB, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 1
  %4 = call i64 @listGET_LIST_ITEM_VALUE(i32* %3)
  store i64 %4, i64* %1, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentTCB, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  %7 = load i64, i64* @configMAX_PRIORITIES, align 8
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentTCB, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = sub nsw i64 %7, %10
  %12 = call i32 @listSET_LIST_ITEM_VALUE(i32* %6, i64 %11)
  %13 = load i64, i64* %1, align 8
  ret i64 %13
}

declare dso_local i64 @listGET_LIST_ITEM_VALUE(i32*) #1

declare dso_local i32 @listSET_LIST_ITEM_VALUE(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
